--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Clone') {
             steps {
-                git 'https://github.com/ishvit23/ASSIGNMENT_2.git'
+                git branch: 'main', url: 'https://github.com/ishvit23/ASSIGNMENT_2.git'
             }
         }
 
