--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,26 +2,28 @@ pipeline {
     agent any
 
     stages {
-        stage('Clone') {
+        stage('Declarative: Checkout SCM') {
             steps {
-                git branch: 'main', url: 'https://github.com/ishvit23/ASSIGNMENT_2.git'
+                checkout scm
             }
         }
 
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build("flask-docker-app")
+                    docker.build('flask-docker-app')
                 }
             }
         }
 
-        stage('Run Container') {
+        stage('Run Docker Container') {
             steps {
                 script {
-                    sh 'docker stop flask-app || true'
-                    sh 'docker rm flask-app || true'
-                    sh 'docker run -d --name flask-app -p 5000:5000 flask-docker-app'
+                    bat '''
+                        docker stop flask-app || exit 0
+                        docker rm flask-app || exit 0
+                        docker run -d --name flask-app -p 5000:5000 flask-docker-app
+                    '''
                 }
             }
         }
