--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     stages {
-        stage('Declarative: Checkout SCM') {
+        stage('Checkout') {
             steps {
                 checkout scm
             }
@@ -11,7 +11,8 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build('flask-docker-app')
+                    // Build Docker image and keep reference
+                    def image = docker.build('flask-docker-app')
                 }
             }
         }
@@ -20,8 +21,8 @@ pipeline {
             steps {
                 script {
                     bat '''
-                        docker stop flask-app || exit 0
-                        docker rm flask-app || exit 0
+                        docker stop flask-app || echo Container not running
+                        docker rm flask-app || echo Container not found
                         docker run -d --name flask-app -p 5000:5000 flask-docker-app
                     '''
                 }
