--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,61 +2,48 @@ pipeline {
     agent any
 
     stages {
-        stage('Checkout') {
+        stage('Checkout Code') {
             steps {
-                checkout scm
+                git 'https://github.com/ishvit23/ASSIGNMENT_2.git'
             }
         }
 
         stage('Build Docker Image') {
             steps {
-                script {
-                    // Build Docker image and keep reference
-                    def image = docker.build('flask-docker-app')
-                }
+                bat 'docker build -t flask-docker-app .'
             }
         }
 
         stage('Run Docker Container') {
             steps {
-                script {
-                    bat '''
-                        docker stop flask-app || echo Container not running
-                        docker rm flask-app || echo Container not found
-                        docker run -d --name flask-app -p 5000:5000 flask-docker-app
-                    '''
-                }
+                // Stop & remove previous container if running
+                bat 'docker stop flask-app || echo "Not running"'
+                bat 'docker rm flask-app || echo "Not found"'
+
+                // Run container on port 5000
+                bat 'docker run -d --name flask-app -p 5000:5000 flask-docker-app'
             }
         }
 
-        stage('Verify Flask App') {
+        stage('Verify App Running') {
             steps {
-                script {
-                    // Wait ~10 seconds for container to start (ping localhost 11 times)
-                    bat 'ping -n 11 127.0.0.1 > nul'
+                // Wait a bit for the app to start
+                bat 'ping -n 6 127.0.0.1 > nul'
 
-                    // Check if Flask app is responding with HTTP 200
-                    def response = bat(returnStdout: true, script: 'curl -s -o nul -w "%{http_code}" http://localhost:5000').trim()
-
-                    if (response != '200') {
-                        error("Flask app did not respond with HTTP 200 OK. Got: ${response}")
-                    } else {
-                        echo "Flask app is running and responding with HTTP 200 OK."
-                    }
-                }
+                // Check if app returns HTTP 200
+                bat '''
+                for /f %%i in ('curl -s -o nul -w "%%{http_code}" http://localhost:5000') do set result=%%i
+                if NOT "%result%"=="200" exit /b 1
+                '''
             }
         }
     }
 
     post {
         always {
-            script {
-                // Stop and remove container after build to clean up
-                bat '''
-                    docker stop flask-app || echo Container not running
-                    docker rm flask-app || echo Container not found
-                '''
-            }
+            // Cleanup after build
+            bat 'docker stop flask-app || echo "Not running"'
+            bat 'docker rm flask-app || echo "Not found"'
         }
     }
 }
