--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,43 +1,55 @@
 pipeline {
     agent any
 
+    environment {
+        IMAGE_NAME = 'flask-docker-app'
+        CONTAINER_NAME = 'flask-app'
+        PORT = '5000'
+    }
+
     stages {
         stage('Checkout Code') {
             steps {
-                git branch: 'main', url: 'https://github.com/ishvit23/ASSIGNMENT_2.git'
+                git 'https://github.com/ishvit23/ASSIGNMENT_2.git'
             }
         }
 
         stage('Build Docker Image') {
             steps {
-                bat 'docker build -t flask-docker-app .'
+                bat "docker build -t %IMAGE_NAME% ."
+            }
+        }
+
+        stage('Stop & Remove Old Container') {
+            steps {
+                script {
+                    bat """
+                        docker stop %CONTAINER_NAME% || echo "No container to stop"
+                        docker rm %CONTAINER_NAME% || echo "No container to remove"
+                    """
+                }
             }
         }
 
         stage('Run Docker Container') {
             steps {
-                script {
-                    bat 'docker stop flask-app || echo "Not running"'
-                    bat 'docker rm flask-app || echo "Not found"'
-                    bat 'docker run -d --name flask-app -p 5000:5000 flask-docker-app'
-                }
+                bat "docker run -d -p %PORT%:5000 --name %CONTAINER_NAME% %IMAGE_NAME%"
             }
         }
 
         stage('Verify App Running') {
             steps {
-                bat '''
-                    curl -s http://localhost:5000 || (echo "App not responding!" && exit /b 1)
-                '''
+                bat "curl http://localhost:%PORT%"
             }
         }
     }
 
     post {
         always {
-            // Clean up container (optional)
-            bat 'docker stop flask-app || echo "Not running"'
-            bat 'docker rm flask-app || echo "Not found"'
+            echo 'Pipeline finished!'
+        }
+        failure {
+            echo 'Something went wrong. Check the logs.'
         }
     }
 }
