--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
     stages {
         stage('Checkout Code') {
             steps {
-                git 'https://github.com/ishvit23/ASSIGNMENT_2.git'
+               git branch: 'main', url: 'https://github.com/ishvit23/ASSIGNMENT_2.git'
             }
         }
 
